[package]
name = "p2p_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.45.1", default-features = false, features = [
    "identify", "relay", "ping", "noise", "plaintext", "tcp-async-io", "yamux", "dcutr", "dns-async-std"] }
futures = "0.3.1"
async-std = "1.6.2"
futures-timer = "3.0.2"
getrandom = "0.2.6"
config = {version = "0.13.1", features = ["ini"]}
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4"
